--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
         applicationId "com.sqz.writingboard"
         minSdk 31
         targetSdk 34
-        versionCode 5
+        versionCode 7
         versionName "0.0.5"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -64,6 +64,10 @@ dependencies {
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
-
+    //ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.7.0-alpha01"
+    //Room
+    implementation "androidx.room:room-runtime:2.5.2"
+    annotationProcessor "androidx.room:room-compiler:2.5.2"
+    implementation("androidx.room:room-ktx:2.5.2")
 }
