--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,14 +10,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.WritingBoard"
+        android:theme="@style/Theme.WritingBoard.Starting"
         android:localeConfig="@xml/locales_config"
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.WritingBoard">
+            android:theme="@style/Theme.WritingBoard.Starting">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
