--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,14 +26,26 @@
             </intent-filter>
         </activity>
         <receiver
-            android:name=".glance.WidgetReceiver"
+            android:label="@string/app_name"
+            android:name=".glance.WritingBoardWidgetReceiver"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
             <meta-data
                 android:name="android.appwidget.provider"
-                android:resource="@xml/app_widget_info" />
+                android:resource="@xml/writingboard_widget_info" />
+        </receiver>
+        <receiver
+            android:label="@string/widget_textonly"
+            android:name=".glance.WritingBoardTextOnlyWidgetReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/writingboard_textonly_widget_info" />
         </receiver>
     </application>
 
