Fixed a crash with select and some text issues

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         minSdk 29
         targetSdk 34
         versionCode 51
-        versionName "0.5.1-beta"
+        versionName "0.5.1-beta2"
     }
 
     buildTypes {
