--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         minSdk 29
         targetSdk 34
         versionCode 52
-        versionName "0.5.2"
+        versionName "0.5.3-beta1"
     }
 
     buildTypes {
@@ -50,13 +50,13 @@ dependencies {
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
-    implementation 'androidx.compose.material3:material3-android:1.2.0-rc01'
-    implementation 'androidx.compose.foundation:foundation-android:1.7.0-alpha01'
-    debugImplementation 'androidx.compose.ui:ui-tooling:1.6.0'
+    implementation 'androidx.compose.material3:material3-android:1.2.0'
+    implementation 'androidx.compose.foundation:foundation-android:1.7.0-alpha03'
+    debugImplementation 'androidx.compose.ui:ui-tooling:1.6.2'
     //ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.7.0"
     //navigation
-    implementation "androidx.navigation:navigation-compose:2.7.6"
+    implementation "androidx.navigation:navigation-compose:2.7.7"
     //datastore
     implementation "androidx.datastore:datastore-preferences:1.0.0"
     //splashscreen
