--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         minSdk 29
         targetSdk 34
         versionCode 53
-        versionName "0.5.3"
+        versionName "0.5.5-beta1"
     }
 
     buildTypes {
