Optimize Setting layout

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         minSdk 29
         targetSdk 34
         versionCode 55
-        versionName "0.5.5"
+        versionName "0.5.5_build-alpha1"
     }
 
     buildTypes {
