--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "com.sqz.writingboard"
         minSdk 29
         targetSdk 34
-        versionCode 55
-        versionName "0.5.8-beta2"
+        versionCode 58
+        versionName "0.5.8"
     }
 
     buildTypes {
