--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         minSdk 29
         targetSdk 34
         versionCode 58
-        versionName "0.5.8"
+        versionName "0.5.8-build_alpha1"
     }
 
     buildTypes {
@@ -32,7 +32,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.3.2'
+        kotlinCompilerExtensionVersion '1.5.1'
     }
     packagingOptions {
         resources {
@@ -42,25 +42,23 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.core:core-ktx:1.13.1'
     implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.7.0'
-    implementation 'androidx.activity:activity-compose:1.8.2'
+    implementation 'androidx.activity:activity-compose:1.9.0'
     implementation platform('androidx.compose:compose-bom:2022.10.00')
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3-android:1.2.1'
     implementation 'androidx.compose.foundation:foundation-android:1.7.0-alpha06'
-    debugImplementation 'androidx.compose.ui:ui-tooling:1.6.5'
+    debugImplementation 'androidx.compose.ui:ui-tooling:1.6.7'
     //ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.7.0"
     //navigation
     implementation "androidx.navigation:navigation-compose:2.7.7"
     //datastore
-    implementation "androidx.datastore:datastore-preferences:1.0.0"
-    //splashscreen
-    implementation "androidx.core:core-splashscreen:1.0.1"
+    implementation "androidx.datastore:datastore-preferences:1.1.1"
     //glanceWidget
-    implementation "androidx.glance:glance-appwidget:1.1.0-beta01"
+    implementation "androidx.glance:glance-appwidget:1.1.0-beta02"
 }
