--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         minSdk 29
         targetSdk 34
         versionCode 58
-        versionName "0.5.8-build_alpha5"
+        versionName "0.7.0-alpha1"
     }
 
     buildTypes {
@@ -44,14 +44,14 @@ android {
 dependencies {
     implementation 'androidx.core:core-ktx:1.13.1'
     implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.2'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.3'
     implementation 'androidx.activity:activity-compose:1.9.0'
     implementation platform('androidx.compose:compose-bom:2024.06.00')
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3-android:1.2.1'
-    implementation 'androidx.compose.foundation:foundation-android:1.7.0-beta03'
+    implementation 'androidx.compose.foundation:foundation-android:1.7.0-beta04'
     debugImplementation 'androidx.compose.ui:ui-tooling:1.6.8'
     //navigation
     implementation "androidx.navigation:navigation-compose:2.7.7"
