--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         minSdk 29
         targetSdk 34
         versionCode 58
-        versionName "0.7.0-alpha3"
+        versionName "0.7.0-alpha4"
     }
 
     buildTypes {
@@ -46,12 +46,12 @@ dependencies {
     implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.22')
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.4'
     implementation 'androidx.activity:activity-compose:1.9.1'
-    implementation platform('androidx.compose:compose-bom:2024.06.00')
+    implementation platform('androidx.compose:compose-bom:2024.08.00')
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3-android:1.2.1'
-    implementation 'androidx.compose.foundation:foundation-android:1.7.0-beta06'
+    implementation 'androidx.compose.foundation:foundation-android:1.7.0-rc01'
     debugImplementation 'androidx.compose.ui:ui-tooling:1.6.8'
     //navigation
     implementation "androidx.navigation:navigation-compose:2.7.7"
