--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         minSdk 29
         targetSdk 34
         versionCode 58
-        versionName "0.7.0-alpha4"
+        versionName "0.7.0-alpha5"
     }
 
     buildTypes {
@@ -32,7 +32,7 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.5.1'
+        kotlinCompilerExtensionVersion '1.5.3'
     }
     packagingOptions {
         resources {
@@ -44,19 +44,19 @@ android {
 dependencies {
     implementation 'androidx.core:core-ktx:1.13.1'
     implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.22')
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.4'
-    implementation 'androidx.activity:activity-compose:1.9.1'
-    implementation platform('androidx.compose:compose-bom:2024.08.00')
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.6'
+    implementation 'androidx.activity:activity-compose:1.9.3'
+    implementation platform('androidx.compose:compose-bom:2024.10.00')
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
-    implementation 'androidx.compose.material3:material3-android:1.2.1'
-    implementation 'androidx.compose.foundation:foundation-android:1.7.0-rc01'
-    debugImplementation 'androidx.compose.ui:ui-tooling:1.6.8'
+    implementation 'androidx.compose.material3:material3-android:1.3.0'
+    implementation 'androidx.compose.foundation:foundation-android:1.7.4'
+    debugImplementation 'androidx.compose.ui:ui-tooling:1.7.4'
     //navigation
-    implementation "androidx.navigation:navigation-compose:2.7.7"
+    implementation "androidx.navigation:navigation-compose:2.8.3"
     //datastore
     implementation "androidx.datastore:datastore-preferences:1.1.1"
     //glanceWidget
-    implementation "androidx.glance:glance-appwidget:1.1.0"
+    implementation "androidx.glance:glance-appwidget:1.1.1"
 }
