--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,14 +5,14 @@ plugins {
 
 android {
     namespace 'com.sqz.writingboard'
-    compileSdk 34
+    compileSdk 35
 
     defaultConfig {
         applicationId "com.sqz.writingboard"
         minSdk 29
         targetSdk 35
         versionCode 58
-        versionName "0.7.0-alpha7.a"
+        versionName "0.7.0-alpha7.b"
     }
 
     buildTypes {
@@ -42,19 +42,19 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.13.1'
+    implementation 'androidx.core:core-ktx:1.15.0'
     implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.22')
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.6'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.7'
     implementation 'androidx.activity:activity-compose:1.9.3'
-    implementation platform('androidx.compose:compose-bom:2024.10.00')
+    implementation platform('androidx.compose:compose-bom:2024.11.00')
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
-    implementation 'androidx.compose.material3:material3-android:1.3.0'
-    implementation 'androidx.compose.foundation:foundation-android:1.7.4'
-    debugImplementation 'androidx.compose.ui:ui-tooling:1.7.4'
+    implementation 'androidx.compose.material3:material3-android:1.3.1'
+    implementation 'androidx.compose.foundation:foundation-android:1.7.5'
+    debugImplementation 'androidx.compose.ui:ui-tooling:1.7.5'
     //navigation
-    implementation "androidx.navigation:navigation-compose:2.8.3"
+    implementation "androidx.navigation:navigation-compose:2.8.4"
     //datastore
     implementation "androidx.datastore:datastore-preferences:1.1.1"
     //glanceWidget
