--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         minSdk 29
         targetSdk 35
         versionCode 58
-        versionName "0.7.0-alpha7.b"
+        versionName "0.7.0-alpha8"
     }
 
     buildTypes {
@@ -45,18 +45,18 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.15.0'
     implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.22')
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.7'
-    implementation 'androidx.activity:activity-compose:1.9.3'
-    implementation platform('androidx.compose:compose-bom:2024.11.00')
+    implementation 'androidx.activity:activity-compose:1.10.0'
+    implementation platform('androidx.compose:compose-bom:2025.01.00')
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3-android:1.3.1'
-    implementation 'androidx.compose.foundation:foundation-android:1.7.5'
-    debugImplementation 'androidx.compose.ui:ui-tooling:1.7.5'
+    implementation 'androidx.compose.foundation:foundation-android:1.7.6'
+    debugImplementation 'androidx.compose.ui:ui-tooling:1.7.6'
     //navigation
-    implementation "androidx.navigation:navigation-compose:2.8.4"
+    implementation "androidx.navigation:navigation-compose:2.8.5"
     //datastore
-    implementation "androidx.datastore:datastore-preferences:1.1.1"
+    implementation "androidx.datastore:datastore-preferences:1.1.2"
     //glanceWidget
     implementation "androidx.glance:glance-appwidget:1.1.1"
 }
