--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         minSdk 29
         targetSdk 35
         versionCode 58
-        versionName "0.7.0-alpha8"
+        versionName "0.7.0-alpha8.a"
     }
 
     buildTypes {
