--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,9 +10,9 @@ android {
     defaultConfig {
         applicationId "com.sqz.writingboard"
         minSdk 29
-        targetSdk 35
+        targetSdk 36
         versionCode 58
-        versionName "0.7.0-alpha8.a"
+        versionName "0.7.0-alpha8.b"
     }
 
     buildTypes {
@@ -42,21 +42,21 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.15.0'
+    implementation 'androidx.core:core-ktx:1.16.0'
     implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.22')
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.7'
-    implementation 'androidx.activity:activity-compose:1.10.0'
-    implementation platform('androidx.compose:compose-bom:2025.01.00')
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.9.1'
+    implementation 'androidx.activity:activity-compose:1.10.1'
+    implementation platform('androidx.compose:compose-bom:2025.06.01')
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
-    implementation 'androidx.compose.material3:material3-android:1.3.1'
-    implementation 'androidx.compose.foundation:foundation-android:1.7.6'
-    debugImplementation 'androidx.compose.ui:ui-tooling:1.7.6'
+    implementation 'androidx.compose.material3:material3-android:1.3.2'
+    implementation 'androidx.compose.foundation:foundation-android:1.8.3'
+    debugImplementation 'androidx.compose.ui:ui-tooling:1.8.3'
     //navigation
-    implementation "androidx.navigation:navigation-compose:2.8.5"
+    implementation "androidx.navigation:navigation-compose:2.9.0"
     //datastore
-    implementation "androidx.datastore:datastore-preferences:1.1.2"
+    implementation "androidx.datastore:datastore-preferences:1.1.7"
     //glanceWidget
     implementation "androidx.glance:glance-appwidget:1.1.1"
 }
