--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     implementation 'androidx.compose.material3:material3-android:1.3.2'
     implementation 'androidx.compose.foundation:foundation-android:1.8.3'
     debugImplementation 'androidx.compose.ui:ui-tooling:1.8.3'
+    //leakcanary
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.14'
     //navigation
     implementation "androidx.navigation:navigation-compose:2.9.0"
     //datastore
