--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+// Top-level build io where you can add configuration options common to all sub-projects/modules.
 plugins {
     id("com.android.application") version '8.6.1' apply false
     id("org.jetbrains.kotlin.android") version "1.9.10" apply false
