--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,64 +1,66 @@
 plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
+    id("com.android.application")
+    id("org.jetbrains.kotlin.android")
+    id("org.jetbrains.kotlin.plugin.compose")
 }
 
 android {
-    namespace 'com.sqz.writingboard'
-    compileSdk 36
+    namespace = "com.sqz.writingboard"
+    compileSdk = 36
 
     defaultConfig {
-        applicationId "com.sqz.writingboard"
-        minSdk 29
-        targetSdk 36
-        versionCode 70
-        versionName "0.7.0"
+        applicationId = "com.sqz.writingboard"
+        minSdk = 29
+        targetSdk = 36
+        versionCode = 70
+        versionName = "0.7.0-build_1"
     }
 
     buildTypes {
         release {
-            minifyEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            minifyEnabled = true
+            proguardFiles(getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro")
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        //noinspection GrDeprecatedAPIUsage
+        jvmTarget = "1.8"
     }
     buildFeatures {
-        compose true
+        compose = true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.5.3'
+        kotlinCompilerExtensionVersion = "1.5.3"
     }
     packagingOptions {
         resources {
-            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+            excludes += "/META-INF/{AL2.0,LGPL2.1}"
         }
     }
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.17.0'
-    implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.22')
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.9.2'
-    implementation 'androidx.activity:activity-compose:1.10.1'
-    implementation platform('androidx.compose:compose-bom:2025.08.00')
-    implementation 'androidx.compose.ui:ui'
-    implementation 'androidx.compose.ui:ui-graphics'
-    implementation 'androidx.compose.ui:ui-tooling-preview'
-    implementation 'androidx.compose.material3:material3-android:1.3.2'
-    implementation 'androidx.compose.foundation:foundation-android:1.9.0'
-    debugImplementation 'androidx.compose.ui:ui-tooling:1.9.0'
+    implementation("androidx.core:core-ktx:1.17.0")
+    implementation platform("org.jetbrains.kotlin:kotlin-bom:1.8.22")
+    implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.9.3")
+    implementation("androidx.activity:activity-compose:1.10.1")
+    implementation platform("androidx.compose:compose-bom:2025.08.01")
+    implementation("androidx.compose.ui:ui")
+    implementation("androidx.compose.ui:ui-graphics")
+    implementation("androidx.compose.ui:ui-tooling-preview")
+    implementation("androidx.compose.material3:material3-android:1.3.2")
+    implementation("androidx.compose.foundation:foundation-android:1.9.0")
+    debugImplementation("androidx.compose.ui:ui-tooling:1.9.0")
     //leakcanary
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.14'
+    debugImplementation("com.squareup.leakcanary:leakcanary-android:2.14")
     //navigation
-    implementation "androidx.navigation:navigation-compose:2.9.3"
+    implementation("androidx.navigation:navigation-compose:2.9.3")
     //datastore
-    implementation "androidx.datastore:datastore-preferences:1.1.7"
+    implementation("androidx.datastore:datastore-preferences:1.1.7")
     //glanceWidget
-    implementation "androidx.glance:glance-appwidget:1.1.1"
+    implementation("androidx.glance:glance-appwidget:1.1.1")
 }
